--- a/index.html
+++ b/index.html
@@ -17,54 +17,44 @@
 <body class = "bg-dark">
     <div class="wrapper">
         <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-            <a class="navbar-brand" href="index.html">UFO Sightings</a>
+            <a class="navbar-brand" href="index.html">Pitch In!</a>
         </nav>        
     </div>
 </body>
 </html>
 <div class="jumbotron">
-    <h1 class="display-4">The Truth is Out There</h1>
+    <h1 class="display-4"></h1>
   </div>
 <div class="container-fluid">
     <div class="row">
       <div class="col-md-4">
-        <h3>UFO Sightings: Fact of Fancy? <small>Ufologists Weigh In</small></h3>
+        <h3>Do you have what it takes to be the best pitcher in the MBA? <small>Make a pitch and find out!</small></h3>
       </div>
       <div class="col-md-8">
         <p>
-          Are we alone in the universe? For millennia, humans have turned to the sky to answer this question. Now, thanks to research generously funded by W. Avy, a UFO-enthusiast and amateur ufologist, we can supplement our sky-searching with data analysis.<br><br>"The release of this analysis is well-timed: It coincides with the celebration of World UFO Day, which is a moment for ufologists around the world to connect, relax, and sample a range of UFO-themed snacks," said Dr. Ursula F. Olivier, the world's preeminent expert on circular sightings. "Citizen-scientists can be especially helpful in both cataloguing sightings—which is hugely helpful for us in our search for aliens—and in helping us celebrate the work that has already been done, such as this data visualization project, which will help us raise awareness of the ubiquity of sightings!"<br><br>Not everyone is ready to celebrate, however. Local CEO and vocal anti-alien activist V. Isualize reached out to our reporters to go on record as firmly opposed to any attempts to provide access to this data. "If there are aliens, they certainly would like to be left alone," she stated, before directing us to the Leave Aliens Alone (LAA) community engagement initiative she founded and funds.<br><br>So what do YOU think? Are we alone in the universe? Are aliens trying to contact us, or do they want to be left alone? Dig through the data yourself, and let us know what you see.
-
+          Explanation of the project
+          Machine Learning Model
+          Data Sources 
+          How we determined each outcome, etc.
+          Insert the google slides presentation
 
         </p>
       </div>
     </div>
   </div>
-  <div class="container-fluid">
+  <div id='SelectionForm'>
     <div class="row">
       <div class="col-md-3">
-        <form class = "bg-dark">
-            <p>Filter Search</p>
+          <p>Make Your Pitch</p>
             <ul class = "bg-dark">
               <li class = "bg-dark">
-                <label for="date">Enter Date</label>
-                <input type="text" placeholder="1/10/2010" id="datetime" />
+
+                <label for="Release Speed">Release Speed</label>
+
+                <input type="text" placeholder="85" id="Release Speed" />
+
               </li>
-              <li class = "bg-dark">
-                <label for="city">Enter City</label>
-                <input type="text" placeholder="benton" id="city" />
-              </li>
-              <li class = "bg-dark">
-                <label for="state">Enter State</label>
-                <input type="text" placeholder="ar" id="state" />
-              </li>
-              <li class = "bg-dark">
-                <label for="country">Enter Country</label>
-                <input type="text" placeholder="us" id="country" />
-              </li>
-              <li class = "bg-dark">
-                <label for="shape">Enter Shape</label>
-                <input type="text" placeholder="circle" id="shape" />
-              </li>
+              
             </ul>
         </form>
       </div>
@@ -72,13 +62,8 @@
         <table class="table table-striped">
           <thead>
             <tr>
-                <th>Date</th>
-                <th>City</th>
-                <th>State</th>
-                <th>Country</th>
-                <th>Shape</th>
-                <th>Duration</th>
-                <th>Comments</th>
+              <img src="static/images/strikezones.jpg" alt="Your Pitch Results">
+              <p>Here the ball should show up on the image based on the users selections and an outcome should pop up</p>
             </tr>
           </thead>
           <tbody></tbody>
