--- a/index.html
+++ b/index.html
@@ -13,22 +13,42 @@
     />
     <link rel="stylesheet" href="static/css/style.css">
 
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
+
+
 <body class = "bg-dark">
     <div class="wrapper">
         <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-            <a class="navbar-brand" href="index.html">Pitch In!</a>
+            <a class="navbar-brand" href="index.html">
+              Pitch In! 
+            </a>
         </nav>        
     </div>
 </body>
 </html>
 <div class="jumbotron">
-    <h1 class="display-4"></h1>
+    <h1 class="display-4">
+      <div class="row">
+        <div class="col-sm-6">
+            <br><br><br><br>
+
+            <div class="presentation">
+                <iframe
+                    src="">
+                </iframe>
+            </div>
+        </div>
+    </h1>
   </div>
 <div class="container-fluid">
     <div class="row">
       <div class="col-md-4">
-        <h3>Do you have what it takes to be the best pitcher in the MBA? <small>Make a pitch and find out!</small></h3>
+        <h3>Do you have what it takes to be the best pitcher in the MLB? <small>Make a pitch and find out!</small></h3>
       </div>
       <div class="col-md-8">
         <p>
@@ -49,10 +69,102 @@
             <ul class = "bg-dark">
               <li class = "bg-dark">
 
-                <label for="Release Speed">Release Speed</label>
+                <label for="ReleaseSpeed">Release Speed</label>
 
-                <input type="text" placeholder="85" id="Release Speed" />
+                <select id='ReleaseSpeed'>
+                  <option value="85"> Select a Speed </option>
+                  <option value="70"> 70 </option>
+                  <option value="75"> 75 </option>
+                  <option value="80"> 80 </option>
+                  <option value="85"> 85 </option>
+                  <option value="90"> 90 </option> 
+                  <option value="95"> 95 </option>
+                  <option value="100"> 100 </option>
+                  <option value="105"> 105 </option>
+                </select>
 
+                <label for="PitchType">Pitch Type</label>
+
+                <select id='PitchType'>
+                  <option value="CH"> Select a Pitch Type </option>
+                  <option value='CH'>Change-Up</option>    
+                  <option value='CU'>Curveball</option>    
+                  <option value='FC'>Cutter</option> 
+                  <option value='EP'>Eephus</option>
+                  <option value='FA'>Fastball</option>
+                  <option value='FF'>Four-Seam Fastball</option> 
+                  <option value='FO'>Forkball</option>
+                  <option value='KC'>Knuckle Curve</option>
+                  <option value='KN'>Knuckleball</option> 
+                  <option value='PO'>Pitchout</option>
+                  <option value='SC'>Screwball</option>
+                  <option value='SI'>Sinker</option>
+                  <option value='SL'>Slider</option>
+                  <option value='CS'>Slow Curveball</option>    
+                  <option value='FS'>Splitter</option> 
+                  <option value='FT'>Two-Seam Fastball</option>  
+                </select>
+
+                <label for="Zone">Zone</label>
+
+                <select id='Zone'>
+                  <option value='1'>Select a Zone</option>
+                  <option value='1'>1</option>    
+                  <option value='2'>2</option>    
+                  <option value='3'>3</option> 
+                  <option value='4'>4</option>
+                  <option value='5'>5</option>
+                  <option value='6'>6</option> 
+                  <option value='7'>7</option>
+                  <option value='8'>8</option>
+                  <option value='9'>9</option> 
+                  <option value='10'>10</option>
+                  <option value='11'>11</option>
+                  <option value='12'>12</option>
+                  <option value='13'>13</option>
+                  <option value='14'>14</option>     
+                </select>
+
+                <label for="Strikes">Strikes</label>
+
+                <select id='Strikes'>
+                  <option value='0'>Select number of previous strikes</option>
+                  <option value='0'>1</option>    
+                  <option value='1'>2</option>    
+                  <option value='2'>3</option>  
+                </select>
+
+                <label for="Strikes">Strikes</label>
+
+                <select id='Strikes'>
+                  <option value='0'>1</option>    
+                  <option value='1'>2</option>    
+                  <option value='2'>3</option>  
+                </select>
+
+                <input id="predict" type="submit" value="CLICK TO PREDICT">
+
+                            <input id="reset" type="reset" value="reset selections"
+                                onclick="document.getElementById('prediction').innerText=''">
+
+                <script>
+                  function refresh() {
+                      const prediction_button = document.getElementById("predict");
+                      prediction_button.onclick = function (event) {
+                          event.preventDefault();
+                          $.ajax({
+                              url: '/result',
+                              type: 'post',
+                              data: $('#selectionForm').serialize(),
+                              success: function (data) {
+                                  console.log(data)
+                                  $("#prediction").html(data)
+                              }
+                          });
+                      }
+                  }
+                  refresh()
+              </script>
               </li>
               
             </ul>
@@ -72,5 +184,4 @@
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-  <script src="static/js/data.js"></script>
-  <script src="static/js/app.js"></script>
+  <script src="static/Python/app.py"></script>
