Added breaks to dropdown menus

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <ul class = "bg-dark">
               <li class = "bg-dark">
 
-                <label for="ReleaseSpeed">Release Speed</label>
+                <label for="ReleaseSpeed">Release Speed</label><br>
 
                 <select id='ReleaseSpeed'>
                   <option value="85"> Select a Speed </option>
@@ -81,9 +81,9 @@
                   <option value="95"> 95 </option>
                   <option value="100"> 100 </option>
                   <option value="105"> 105 </option>
-                </select>
+                </select><br><br>
 
-                <label for="PitchType">Pitch Type</label>
+                <label for="PitchType">Pitch Type</label><br>
 
                 <select id='PitchType'>
                   <option value="CH"> Select a Pitch Type </option>
@@ -103,9 +103,9 @@
                   <option value='CS'>Slow Curveball</option>    
                   <option value='FS'>Splitter</option> 
                   <option value='FT'>Two-Seam Fastball</option>  
-                </select>
+                </select><br><br>
 
-                <label for="Zone">Zone</label>
+                <label for="Zone">Zone</label><br>
 
                 <select id='Zone'>
                   <option value='1'>Select a Zone</option>
@@ -123,24 +123,24 @@
                   <option value='12'>12</option>
                   <option value='13'>13</option>
                   <option value='14'>14</option>     
-                </select>
+                </select><br><br>
 
-                <label for="Strikes">Strikes</label>
+                <label for="Strikes">Strikes</label><br>
 
                 <select id='Strikes'>
                   <option value='0'>Select number of previous strikes</option>
                   <option value='0'>1</option>    
                   <option value='1'>2</option>    
                   <option value='2'>3</option>  
-                </select>
+                </select><br><br>
 
-                <label for="Strikes">Strikes</label>
+                <label for="Strikes">Strikes</label><br>
 
                 <select id='Strikes'>
                   <option value='0'>1</option>    
                   <option value='1'>2</option>    
                   <option value='2'>3</option>  
-                </select>
+                </select><br><br>
 
                 <input id="predict" type="submit" value="CLICK TO PREDICT">
 
