Added defaults to dropdowns

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div class="container-fluid">
     <div class="row">
       <div class="col-md-4">
-        <h3>Do you have what it takes to be the best pitcher in the MLB? <small>Make a pitch and find out!</small></h3>
+        <h3>Do you have what it takes to be the best pitcher in the MLB? <br><small>Make a pitch and find out!</small></h3>
       </div>
       <div class="col-md-8">
         <p>
@@ -69,7 +69,7 @@
             <ul class = "bg-dark">
               <li class = "bg-dark">
 
-                <label for="ReleaseSpeed">Release Speed</label><br>
+                <label for="ReleaseSpeed">Release Speed (Default: 85 mph)</label><br>
 
                 <select id='ReleaseSpeed'>
                   <option value="85"> Select a Speed </option>
@@ -83,10 +83,10 @@
                   <option value="105"> 105 </option>
                 </select><br><br>
 
-                <label for="PitchType">Pitch Type</label><br>
+                <label for="PitchType">Pitch Type (Default: Fastball) </label><br>
 
                 <select id='PitchType'>
-                  <option value="CH"> Select a Pitch Type </option>
+                  <option value="FA"> Select a Pitch Type </option>
                   <option value='CH'>Change-Up</option>    
                   <option value='CU'>Curveball</option>    
                   <option value='FC'>Cutter</option> 
@@ -105,10 +105,10 @@
                   <option value='FT'>Two-Seam Fastball</option>  
                 </select><br><br>
 
-                <label for="Zone">Zone</label><br>
+                <label for="Zone">Zone (Default: 5)</label><br>
 
                 <select id='Zone'>
-                  <option value='1'>Select a Zone</option>
+                  <option value='5'>Select a Zone</option>
                   <option value='1'>1</option>    
                   <option value='2'>2</option>    
                   <option value='3'>3</option> 
@@ -125,7 +125,7 @@
                   <option value='14'>14</option>     
                 </select><br><br>
 
-                <label for="Strikes">Strikes</label><br>
+                <label for="Strikes">Strikes (Default: 0)</label><br>
 
                 <select id='Strikes'>
                   <option value='0'>Select number of previous strikes</option>
