Updated header formatting

--- a/index.html
+++ b/index.html
@@ -42,14 +42,18 @@
                     src="">
                 </iframe>
             </div>
+
         </div>
-    </h1>
-  </div>
-<div class="container-fluid">
-    <div class="row">
-      <div class="col-md-4">
-        <h3>Do you have what it takes to be the best pitcher in the MLB? <br><small>Make a pitch and find out!</small></h3>
       </div>
+    </h1>
+</div>
+
+<div class="container-fluid">
+    <div class="header">
+      
+        <h3>Do you have what it takes to be the best pitcher in the MLB?</h3><br>
+        <h4>Make a pitch and find out!</h4>
+    </div>
       <div class="col-md-8">
         <p>
           Explanation of the project
