--- a/index.html
+++ b/index.html
@@ -23,22 +23,24 @@
 
 <body class = "bg-dark">
     <div class="wrapper">
-        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+        <nav class="navbar">
+        <!-- navbar-dark bg-dark navbar-expand-lg"> -->
             <div class='project-title'>Pitch In!</div>   
             <a class='toggle-button' href='#'>
               <span class='bar'></span>
               <span class='bar'></span>
             </a>
-            <div class='dropdown'>
-                <button class='dropbtn'>Navigate</button>
-                <div class='dropdown-content'>
-                    <a href='/'>Home</a>
-                    <a href='/pitches'>Predict a Pitch</a>
-                    <a href='/zones'>Predict the Zone</a>
-                </div>
-            </div> 
+            <div class = 'navbar-links'>
+                <div class='dropdown'>
+                  <button class='dropbtn'>Navigate</button>
+                  <div class='dropdown-content'>
+                      <a href='/'>Home</a>
+                      <a href='/pitches'>Predict a Pitch</a>
+                      <a href='/zones'>Predict the Zone</a>
+                  </div>
+                </div> 
             </div>
-        </nav>        
+          </nav>        
     </div>
 
 
