--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
   </h1>
 </div>
 
+    
+<div class ='presentation'>
+    <iframe src="https://docs.google.com/presentation/d/1oTCmH0jA_3dtR0kVGq1bWAZvFO9u1cl-YB06-JuqyF8/edit#slide=id.ge8aee35c26_0_11">
+    </iframe>
+</div>
 <div class="container-fluid">
     <div class="header">
       
