Fix slides from autoadvancing

--- a/index.html
+++ b/index.html
@@ -63,30 +63,29 @@
         </div>
 
         <!-- Google Slides -->
-        <!-- NOTE: Presentation must be made public before we can properly embed it -->
         <div class='row'>
             <div class="col-md-6">
-              <p>
-                <div class ='presentation'>
-                  <iframe 
-                    src="https://docs.google.com/presentation/d/1oTCmH0jA_3dtR0kVGq1bWAZvFO9u1cl-YB06-JuqyF8/embed?start=true">
-                  </iframe>
-                </div>
+                <p>
+                    <div class ='presentation'>
+                      <iframe 
+                        src="https://docs.google.com/presentation/d/1oTCmH0jA_3dtR0kVGq1bWAZvFO9u1cl-YB06-JuqyF8/embed?start=false">
+                      </iframe>
+                    </div>
               
-              </p>
+                </p>
             </div>
             
             <!-- List -->
             <div class='col-md-6'>
-              <ul class='bg-dark'>
-                <h4>Here's where we can list limitations, etc </h4>
-                <li class='list-group-item bg-dark'>
-                  Point 1
-                </li>
-                <li class='list-group-item bg-dark'>
-                  Point 2
-                </li>
-              </ul>
+                <ul class='bg-dark'>
+                    <h4>Here's where we can list limitations, etc </h4>
+                    <li class='list-group-item bg-dark'>
+                        Point 1
+                    </li>
+                    <li class='list-group-item bg-dark'>
+                        Point 2
+                    </li>
+                </ul>
             </div>
         </div>
       </div>
@@ -111,8 +110,8 @@
     </div>
   </div> -->
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-  <script src="static/Python/app.py"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <script src="static/Python/app.py"></script>
 
 </body>
 </html>
