Test different color combinations and effects *NOT FINAL*

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body class = "bg-dark">
     <div class="wrapper">
-        <nav class="navbar">
+        <nav class="navbar bg-primary">
         <!-- navbar-dark bg-dark navbar-expand-lg"> -->
             <div class='project-title'>Team Country Music Hall of Fame Final Project</div>   
             <a class='toggle-button' href='#'>
