--- a/pitches.html
+++ b/pitches.html
@@ -23,7 +23,7 @@
 
 <body class = "bg-dark">
     <div class="wrapper">
-        <nav class="navbar">
+        <nav class="navbar bg-primary">
         <!-- navbar-dark bg-dark navbar-expand-lg"> -->
             <div class='project-title'>Team Country Music Hall of Fame Final Project</div>   
             <a class='toggle-button' href='#'>
@@ -48,7 +48,7 @@
     </div>
 
     <div class="header">
-        <h1>Do you have what it takes to be the best pitcher in the MLB?</h1><br>
+        <h1>Do <i>you</i> have what it takes to be the best pitcher in the MLB?</h1><br>
         <h2>Make a pitch and find out!</h2>
     </div>
 
@@ -150,7 +150,7 @@
                     <label for="ReleaseSpin">Release Spin Rate (Default: 3000)</label><br>
     
                     <select id='ReleaseSpin'>
-                        <option value='2000'>Select the spin rate</option>
+                        <option value='3000'>Select the spin rate</option>
                         <option value='2000'>2000</option>
                         <option value='2500'>2500</option>    
                         <option value='3000'>3000</option>    
